--- a/styles/index.css
+++ b/styles/index.css
@@ -33,4 +33,8 @@
             url('../public/fonts/manrope-v11-latin-800.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
             url('../public/fonts/manrope-v11-latin-800.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
     }
+    /* Apply custom font to all the Html */
+    html {
+        @apply font-manrope;
+    }  
 }
