--- a/styles/index.css
+++ b/styles/index.css
@@ -46,10 +46,10 @@
 }
 
 @layer components {
-    .link {
-        @apply underline underline-offset-8;
+    a.link {
+        @apply underline underline-offset-8 decoration-2;
     }
-    .link:hover {
-        @apply no-underline;
+    a.link:hover {
+        @apply decoration-dotted;
     }
 }
