--- a/styles/index.css
+++ b/styles/index.css
@@ -3,53 +3,56 @@
 @tailwind utilities;
 
 @layer base {
-    /* manrope-regular - latin */
-    @font-face {
-        font-family: 'Manrope';
-        font-style: normal;
-        font-weight: 400;
-        font-display: swap;
-        src: local(''),
-            url('../public/fonts/manrope-v11-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-            url('../public/fonts/manrope-v11-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-    }
-    /* manrope-700 - latin */
-    @font-face {
-        font-family: 'Manrope';
-        font-style: normal;
-        font-weight: 700;
-        font-display: swap;
-        src: local(''),
-            url('../public/fonts/manrope-v11-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-            url('../public/fonts/manrope-v11-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-    }
-    /* manrope-800 - latin */
-    @font-face {
-        font-family: 'Manrope';
-        font-style: normal;
-        font-weight: 800;
-        font-display: swap;
-        src: local(''),
-            url('../public/fonts/manrope-v11-latin-800.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-            url('../public/fonts/manrope-v11-latin-800.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-    }
-    /* Apply custom font to all the Html */
-    html {
-        @apply font-sans bg-surface-l text-primary-l dark:bg-surface-d dark:text-primary-d;
-    }
-    a {
-        @apply underline underline-offset-4;
-    }
-    a:hover {
-        @apply no-underline;
-    }
+  /* manrope-regular - latin */
+  @font-face {
+    font-family: "Manrope";
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local(""),
+      url("../public/fonts/manrope-v11-latin-regular.woff2") format("woff2"),
+      /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url("../public/fonts/manrope-v11-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+  /* manrope-700 - latin */
+  @font-face {
+    font-family: "Manrope";
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: local(""),
+      url("../public/fonts/manrope-v11-latin-700.woff2") format("woff2"),
+      /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url("../public/fonts/manrope-v11-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+  /* manrope-800 - latin */
+  @font-face {
+    font-family: "Manrope";
+    font-style: normal;
+    font-weight: 800;
+    font-display: swap;
+    src: local(""),
+      url("../public/fonts/manrope-v11-latin-800.woff2") format("woff2"),
+      /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url("../public/fonts/manrope-v11-latin-800.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+  /* Apply custom font to all the Html */
+  html {
+    @apply font-sans surface text-primary-l dark:surface-d dark:text-primary-d;
+  }
+  a {
+    @apply underline underline-offset-4;
+  }
+  a:hover {
+    @apply no-underline;
+  }
 }
 
 @layer components {
-    a.link {
-        @apply underline underline-offset-4 decoration-2;
-    }
-    a.link:hover {
-        @apply decoration-dotted;
-    }
+  a.link {
+    @apply underline underline-offset-4 decoration-2;
+  }
+  a.link:hover {
+    @apply decoration-dotted;
+  }
 }
