--- a/styles/index.css
+++ b/styles/index.css
@@ -3,42 +3,50 @@
 @tailwind utilities;
 
 @layer base {
-  /* manrope-regular - latin */
+  /* assistant-regular - latin */
   @font-face {
-    font-family: "Manrope";
+    font-family: "Assistant";
     font-style: normal;
     font-weight: 400;
-    font-display: swap;
     src: local(""),
-      url("../public/fonts/manrope-v11-latin-regular.woff2") format("woff2"),
+      url("../public/fonts/assistant-v18-latin-regular.woff2") format("woff2"),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url("../public/fonts/manrope-v11-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        url("../public/fonts/assistant-v18-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
-  /* manrope-700 - latin */
+  /* assistant-700 - latin */
   @font-face {
-    font-family: "Manrope";
+    font-family: "Assistant";
     font-style: normal;
     font-weight: 700;
-    font-display: swap;
     src: local(""),
-      url("../public/fonts/manrope-v11-latin-700.woff2") format("woff2"),
+      url("../public/fonts/assistant-v18-latin-700.woff2") format("woff2"),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url("../public/fonts/manrope-v11-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        url("../public/fonts/assistant-v18-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
-  /* manrope-800 - latin */
+  /* assistant-600 - latin */
   @font-face {
-    font-family: "Manrope";
+    font-family: "Assistant";
+    font-style: normal;
+    font-weight: 600;
+    src: local(""),
+      url("../public/fonts/assistant-v18-latin-600.woff2") format("woff2"),
+      /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url("../public/fonts/assistant-v18-latin-600.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+  /* assistant-800 - latin */
+  @font-face {
+    font-family: "Assistant";
     font-style: normal;
     font-weight: 800;
-    font-display: swap;
     src: local(""),
-      url("../public/fonts/manrope-v11-latin-800.woff2") format("woff2"),
+      url("../public/fonts/assistant-v18-latin-800.woff2") format("woff2"),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url("../public/fonts/manrope-v11-latin-800.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        url("../public/fonts/assistant-v18-latin-800.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
+
   /* Apply custom font to all the Html */
   html {
-    @apply font-sans bg-main-bg text-text-primary dark:bg-main-bg-d dark:text-text-primary-d;
+    @apply bg-main-bg text-text-primary dark:bg-main-bg-d dark:text-text-primary-d;
   }
   a {
     @apply underline underline-offset-4;
@@ -54,5 +62,8 @@
   }
   a.link:hover {
     @apply decoration-dotted;
+  }
+  .display-large {
+    @apply text-text-4xl font-extrabold;
   }
 }
