Update 3 files with typography and breakpoints improvements

--- a/styles/index.css
+++ b/styles/index.css
@@ -64,6 +64,6 @@
     @apply decoration-dotted;
   }
   .display-large {
-    @apply text-text-4xl font-extrabold;
+    @apply text-text-4xl font-extrabold leading-0 text-text-primary;
   }
 }
