--- a/styles/index.css
+++ b/styles/index.css
@@ -49,20 +49,14 @@
     @apply bg-main-bg text-text-primary dark:bg-main-bg-d dark:text-text-primary-d;
   }
   a {
-    @apply underline underline-offset-4;
+    @apply underline decoration-1 underline-offset-8;
   }
   a:hover {
-    @apply no-underline;
+    @apply decoration-dashed;
   }
 }
 
 @layer components {
-  a.link {
-    @apply underline underline-offset-4 decoration-2;
-  }
-  a.link:hover {
-    @apply decoration-dotted;
-  }
   .display-large {
     @apply text-fontSize-6 font-extrabold leading-0;
   }
@@ -115,10 +109,10 @@
     @apply text-fontSize-0 font-regular leading-4;
   }
   .link-block {
-    @apply text-fontSize-1 font-regular leading-3 decoration-1 underline-offset-8 hover:decoration-text-primary hover:decoration-dotted;
+    @apply text-fontSize-1 font-regular leading-3 underline-offset-8;
   }
 }
 
 #__next {
-  @apply xxl:container mx-auto xs:pl-4 xs:pr-4 xs:pt-8 md:pr-16 md:pl-16;
+  @apply xxl:container mx-auto xs:pl-4 xs:pr-4 md:pr-16 md:pl-16 md:flex md:flex-col md:justify-between md:h-screen;
 }
